# autonomous-dumper-ros2

./: .gitignore  README.md
OpenConstructionSimulator/Assets/OpenConstructionSim/Scenes/: NewEnv.unity
autonomous_dumper_ws/log/: latest_build
autonomous_dumper_ws/src/camera_tools/: CMakeLists.txt  package.xml
autonomous_dumper_ws/src/camera_tools/src/: camera_info_pub.cpp
autonomous_dumper_ws/src/differential_drive_controller/: CMakeLists.txt  package.xml
autonomous_dumper_ws/src/differential_drive_controller/src/: differential_drive_controller.cpp  keyboard_controller.cpp
autonomous_dumper_ws/src/dumper_msgs/: CMakeLists.txt  package.xml
autonomous_dumper_ws/src/dumper_msgs/msg/: DetectedRadarObjectArray.msg
autonomous_dumper_ws/src/ira_laser_tools/: CMakeLists.txt
autonomous_dumper_ws/src/ira_laser_tools/src/: laserscan2pcl.cpp  laserscan_virtualizer.cpp  pcl_merger.cpp
autonomous_dumper_ws/src/lidar_slam_example/: package.xml  setup.cfg  setup.py
autonomous_dumper_ws/src/lidar_slam_example/config/: nav2_params.yaml
autonomous_dumper_ws/src/lidar_slam_example/launch/: lidar_slam_example.launch.py  lidar_slam_example.py
autonomous_dumper_ws/src/rgbd_slam_example/: CMakeLists.txt  package.xml
autonomous_dumper_ws/src/rgbd_slam_example/config/: nav2_params.yaml  nav2_params_lidar_rgbd.yaml  nav2_params_rgbd.yaml
autonomous_dumper_ws/src/rgbd_slam_example/launch/: depth_to_scan_nav.launch.py  fake_lidar_rgbd_mapping.launch.py  lidar_rgbd_mapping.launch.py  lidar_rgbd_navigation.launch.py  point_cloud_xyz.launch.py  rgbd_navigation.launch.py  rgbd_slam_example.py  rtab_mapping_rgbd.launch.py  scan_merger_test.launch.py  single_rgbd_mapping.launch.py
autonomous_dumper_ws/src/rgbd_slam_example/maps/: construction_cite_map.pgm  construction_cite_map.yaml  map_lidar.pgm  map_lidar.yaml  map_rgbd.pgm  map_rgbd.yaml  rtabmap.yaml
autonomous_dumper_ws/src/rgbd_slam_example/rviz/: depth2points.rviz  rgbd.rviz
autonomous_dumper_ws/src/rgbd_slam_example/src/: fake_odom_pub.cpp
dumper_unity_test/Assets/Station_v3/: DEMO_Scene.unity
dumper_unity_test/ProjectSettings/: ProjectSettings.asset
dumper_unity_test/Temp/: workerlic
dumper_unity_test/Temp/__Backupscenes/: 0.backup
dumper_unity_test/UserSettings/: EditorUserSettings.asset
