<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_slam_example</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="zi.zhou@tum.de">zzq</maintainer>
  <license>TODO: License declaration</license>

  <!-- buildtool_depend>ament_cmake</buildtool_depend -->

  <!--test_depend>ament_lint_auto</test_depend-->
  <!--test_depend>ament_lint_common</test_depend-->
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
